# john_dockerfile

./: .gitignore  Dockerfile  README.md  hello.py  pyproject.toml
